findly-builder/src/app/components/search-insights/search-insights.component.scss
.main-metrics-container{
    background: #F8F9FB;
    height: calc(100vh - 61px);  
    .header-sec{
        padding: 10px 30px;
        background: #F8F9FA;
        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
        margin-bottom: 3px !important;
        .bread-cum-sec{
            .bread-name{
                color: #9AA0A6;
                font-weight: 500;
                font-size: 14px;
                line-height: 17px;
                &.active-name{
                    color: #000000;
                    font-weight: 500;
                    font-size: 18px;
                    line-height: 22px;
                    position: relative;
                    top: 1px;
                }
            }
            img{
                margin: 0 10px;
                position: relative;
                top: 1px;
            }            
        }
        .date-info{
            color: #202124;
            font-size: 14px;
            line-height: 17px;
            font-weight: normal;
            margin-right: 12px;
            .bold-text{
                font-weight: bold;
            }
        }
        .date-select{
            background: #FFFFFF;
            border: 1px solid #E4E5E7;
            box-sizing: border-box;
            border-radius: 8px;
            padding: 3px 4px;
            margin-right: 16px;
            .time{
                background: #fff;
                border-radius: 4px;
                font-weight: normal;
                font-size: 12px;
                color: #202124;
                padding: 3px 10px;                
                display: inline-block;
                cursor: pointer;
                &.active{
                    background: #0D6EFD;
                    color: #ffffff;
                }
                &.selected{
                    background: #0D6EFD;
                    color: #ffffff;
                }
            }
        }
        .export{
            cursor: pointer;
        }
    }     
    .scroll_content{
        height: calc(100vh - 120px);
    }   
    .data-information-content{                
        padding: 30px 30px 0 30px;        
        .box-content{                
            padding: 20px 30px 20px 30px;
            position: relative;
            height: 100%;
            background: #FFFFFF;
            border: 1px solid #E4E5E7;
            box-sizing: border-box;
            border-radius: 8px;
            box-shadow: none;     
            .search-filter-block{
                .kr-sg-input-search{
                    width: 252px;
                    input{
                        padding-left: 30px;
                    }
                }
            }
            .searched-details{
                margin: 22px 0;
                .bulb-icon{
                    width: 25px;
                    flex-shrink: 0;
                    margin-top: 7px;
                }
                .seach-content{
                    display: flex;
                    flex-wrap: wrap;
                    .names{
                        background: #EAF6EC;
                        border: 1px solid #93D3A2;
                        box-sizing: border-box;
                        border-radius: 4px;
                        padding: 4px 12px;
                        margin: 6px;
                        font-weight: 600;
                        font-size: 14px;
                        color: #135423;
                    }
                }
            }          
            .title-card{
                color: #202124;
                font-weight: 500;
                font-size: 16px;
                line-height: 19px;                
            }                                                                     
        } 
        .tab-sec-data{
            .nav-tabs{
                padding: 8px 0px;
                margin: 0 0 23px 0;
                border-bottom: 1px solid #D8D8D8;
                position: relative;
                .nav-item{
                    margin: 0 27px 0 0;              
                    .nav-link{
                        padding: 0;
                        margin: 0;
                        color: #9AA0A6;
                        letter-spacing: 0.714286px;
                        text-transform: uppercase;
                        font-weight: 600;
                        font-size: 14px;
                        position: relative;
                        border: 0;
                        border-radius: 0;
                        &::before{
                            content: "";
                            position: absolute;
                            height: 2px;
                            width: 100%;
                            background: #0D6EFD;
                            bottom: -9px;
                            left: 0;
                            display: none;
                        }
                        &.active{
                            color: #0D6EFD;
                            &::before{
                                display: block;
                            }
                        }
                    }
                }
                .type_sort_dropdown{
                    position: absolute;
                    right: 5px;
                    padding: 0px 5px;
                    border-radius: 4px;
                    &.show{                    
                        background: #e5e8ec;
                    }
                }
            }    
        }               
    }
}

.table_data_content{
    padding: 0;
    .table_header{
        padding: 16px 15px;   
        align-items: center;
        box-shadow: inset 0px -1px 0px #E4E5E7;                 
        .title{
            padding: 0 5px;
            font-style: normal;
            font-weight: 500;
            font-size: 12px;
            line-height: 14px;
            text-transform: capitalize;
            color: #9AA0A6;
        }                    
    }
    .table_body{
        padding: 18px 15px;
        box-shadow: inset 0px -1px 0px #E4E5E7;                 
        transition: 0.3s all ease-in;
        align-items: center;
        .view-query{
            display: none;
            color: #5F6368;
            font-weight: 600;
            font-size: 12px;
            line-height: 15px;
            cursor: pointer;
            img{
                cursor: pointer;
                position: relative;
                top: -1px;
                margin-right: 11px;
            }
        }
        &:hover{
            background: #F8F9FA;
            transition: 0.3s all ease-in;
            .count{
                display: none;
            }
            .view-query{                            
                display: inline-block;                                                     
            }
        }
        .title{
            padding: 0 5px;
            font-style: normal;
            font-size: 14px;
            line-height: 14px;
            color: #202124;   
            cursor: default;
            img{
                cursor: pointer;
            } 
            .img-sec{
                margin-right: 25px;
            }
        }                    
    }
    .footer-simulate{
        text-align: right;
        margin: 30px 0;                    
    }
} 
::ng-deep perfect-scrollbar .ps--active-y{
    .ps__thumb-y{
        width: 3px !important;
    }
    .ps__rail-y{
        width: 3px !important;
    }
    .ps__thumb-x{
        display: none !important;
    }
    .ps__rail-x{
        display: none !important;
    }
}

::ng-deep .modal_popups_{
    &.view-query-modal{
        .modal-header{
            padding: 15px 30px;
            position: relative;
            height: auto !important;
            box-shadow: none;
            .small-title{
                color: #9AA0A6;
                font-weight: 500;
                font-size: 12px;
                line-height: 15px;
                margin-bottom: 6px;
            }
            .title-small{
                color: #202124;
                font-style: normal;
                font-weight: 600;
                font-size: 16px;
                line-height: 19px;
                margin-bottom: 6px;
            }
            .response{
                display: inline-block;
                color: #FFAB6E;
                font-weight: 500;
                font-size: 10px;
                line-height: 12px;
                border: 1px solid #FFAB6E;
                box-sizing: border-box;
                border-radius: 4px;
                padding: 1px 6px;
            }
            .close_icon{
                top: 30px;
                position: absolute;
                right: 30px;
            }
        }   
        .modal-body{
            padding-top: 0 !important;
        }
    }
}
.info-icon{
    margin-left: 4px;
    cursor: pointer;
}

